# cortex-score

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  LICENSE-THIRD-PARTY.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: install-gpu.md
examples/: cpu_only_from_predictions.py  modal_smoke.py  quickstart.py
examples/ai_video_pipeline/: filter_by_attention.py
requirements/: tribev2-gpu.txt
src/cortex_score/: __init__.py  api.py  atlas.py  cli.py  exceptions.py  schemas.py  version.py
src/cortex_score/cache/: __init__.py  keys.py  store.py
src/cortex_score/data/: labels_schaefer400.json  labels_yeo17.json  manifest.json  network_groups.json  schaefer400_to_yeo17.npy  schaefer400_vertex.npy  yeo17_vertex.npy
src/cortex_score/export/: __init__.py  niivue.py
src/cortex_score/processing/: __init__.py  aggregate.py  metrics.py  networks.py  normalize.py  validate.py
src/cortex_score/runners/: __init__.py  base.py  tribev2.py
tests/: conftest.py
tests/fixtures/: schema_v1.json  score_result_v1.json
tests/integration/: test_api_extra.py  test_cache.py  test_cli.py  test_packaging.py  test_schema_snapshot.py  test_score_from_predictions.py  test_score_import.py
tests/unit/: test_aggregate.py  test_atlas.py  test_exceptions.py  test_export_niivue.py  test_metrics.py  test_networks.py  test_normalize.py  test_schemas.py  test_validate.py
